@@ -13,8 +13,6 @@
 
 #define MAX_LINE_LENGTH 128
 
-DEFINE_VECTOR(GBACheatPatchList, struct GBACheatPatch);
-
 static void _addBreakpoint(struct mCheatDevice* device, struct GBACheatSet* cheats) {
 	if (!device->p || !cheats->hook) {
 		return;
@@ -35,36 +33,6 @@ static void _removeBreakpoint(struct mCheatDevice* device, struct GBACheatSet* c
 		return;
 	}
 	GBAClearBreakpoint(device->p->board, cheats->hook->address, cheats->hook->mode, cheats->hook->patchedOpcode);
-}
-
-static void _patchROM(struct mCheatDevice* device, struct GBACheatSet* cheats) {
-	if (!device->p) {
-		return;
-	}
-	size_t i;
-	for (i = 0; i < GBACheatPatchListSize(&cheats->romPatches); ++i) {
-		struct GBACheatPatch* patch = GBACheatPatchListGetPointer(&cheats->romPatches, i);
-		if (patch->applied) {
-			continue;
-		}
-		GBAPatch16(device->p->cpu, patch->address, patch->newValue, &patch->oldValue);
-		patch->applied = true;
-	}
-}
-
-static void _unpatchROM(struct mCheatDevice* device, struct GBACheatSet* cheats) {
-	if (!device->p) {
-		return;
-	}
-	size_t i;
-	for (i = 0; i < GBACheatPatchListSize(&cheats->romPatches); ++i) {
-		struct GBACheatPatch* patch = GBACheatPatchListGetPointer(&cheats->romPatches, i);
-		if (!patch->applied) {
-			continue;
-		}
-		GBAPatch16(device->p->cpu, patch->address, patch->oldValue, NULL);
-		patch->applied = false;
-	}
 }
 
 static void GBACheatSetDeinit(struct mCheatSet* set);
@@ -101,7 +69,6 @@ static struct mCheatSet* GBACheatSetCreate(struct mCheatDevice* device, const ch
 
 	set->d.refresh = GBACheatRefresh;
 
-	GBACheatPatchListInit(&set->romPatches, 4);
 	return &set->d;
 }
 
@@ -120,18 +87,15 @@ static void GBACheatSetDeinit(struct mCheatSet* set) {
 			free(gbaset->hook);
 		}
 	}
-	GBACheatPatchListDeinit(&gbaset->romPatches);
 }
 
 static void GBACheatAddSet(struct mCheatSet* cheats, struct mCheatDevice* device) {
 	struct GBACheatSet* gbaset = (struct GBACheatSet*) cheats;
 	_addBreakpoint(device, gbaset);
-	_patchROM(device, gbaset);
 }
 
 static void GBACheatRemoveSet(struct mCheatSet* cheats, struct mCheatDevice* device) {
 	struct GBACheatSet* gbaset = (struct GBACheatSet*) cheats;
-	_unpatchROM(device, gbaset);
 	_removeBreakpoint(device, gbaset);
 }
 
@@ -276,13 +240,8 @@ bool GBACheatAddLine(struct mCheatSet* set, const char* line, int type) {
 
 static void GBACheatRefresh(struct mCheatSet* cheats, struct mCheatDevice* device) {
 	struct GBACheatSet* gbaset = (struct GBACheatSet*) cheats;
-	if (cheats->enabled) {
-		_patchROM(device, gbaset);
-		if (gbaset->hook && !gbaset->hook->reentries) {
-			_addBreakpoint(device, gbaset);
-		}
-	} else {
-		_unpatchROM(device, gbaset);
+	if (cheats->enabled && gbaset->hook && !gbaset->hook->reentries) {
+		_addBreakpoint(device, gbaset);
 	}
 }
 
