@@ -92,6 +92,7 @@ Misc:
  - Core: Add savedataUpdated callback
  - Core: Add shutdown callback
  - Core: Rework thread state synchronization
+ - Core: Improve support for ROM patch cheats, supporting disabling overlapping patches
  - GB: Allow pausing event loop while CPU is blocked
  - GB: Add support for sleep and shutdown callbacks
  - GB I/O: Implement preliminary support for PCM12/PCM34 (closes mgba.io/i/1468)
